# push-notifications-example

./: LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
src/: main.py  models.py  push.py  tasks.py
src/static/: sw.js
src/templates/: home.jinja2
